crates/index-scheduler/src/scheduler/snapshots/index_scheduler__scheduler__test_embedders__import_vectors-14.snap
---
source: crates/index-scheduler/src/scheduler/test_embedders.rs
expression: simple_hf_config.embedder_options
---
{
  "HuggingFace": {
    "model": "sentence-transformers/all-MiniLM-L6-v2",
    "revision": "e4ce9877abf3edfe10b0d82785e83bdcb973e22e",
    "distribution": null,
    "pooling": "useModel"
  }
}
