crates/index-scheduler/src/scheduler/snapshots/index_scheduler__scheduler__test_embedders__import_vectors-15.snap
---
source: crates/index-scheduler/src/scheduler/test_embedders.rs
expression: doc
snapshot_kind: text
---
{
  "doggo": "Intel",
  "breed": "beagle",
  "_vectors": {
    "noise": [
      0.1,
      0.2,
      0.3
    ]
  }
}
