crates/index-scheduler/src/scheduler/snapshots/index_scheduler__scheduler__test_embedders__import_vectors-8.snap
---
source: crates/index-scheduler/src/scheduler/test_embedders.rs
expression: fakerest_config.embedder_options
---
{
  "Rest": {
    "api_key": "My super secret",
    "distribution": null,
    "dimensions": 384,
    "url": "http://localhost:7777",
    "request": "{{text}}",
    "search_fragments": {},
    "indexing_fragments": {},
    "response": "{{embedding}}",
    "headers": {}
  }
}
